--- a/Templates/index.html
+++ b/Templates/index.html
@@ -32,19 +32,19 @@
                     <div>5</div>
                     <div>6</div>
                 </div>
-                <div class="numbers">
-                    <div>1</div>
-                    <div>2</div>
-                    <div>3</div>
-                </div>
-                <div class="numbers">
-                    <div>0</div>
-                    <div>.</div>
-                    <div id="clear">C</div>
-                </div>
+                <div class="numbers"></div>
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
             </div>
-            <div class="equal" id="result">=</div>
+            <div class="numbers">
+                <div>0</div>
+                <div>.</div>
+                <div id="clear">C</div>
+            </div>
         </div>
+        <div class="equal" id="result">=</div>
+    </div>
     </div>
 </body>
 <script src="../javascript.js"></script>
